--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.4.18",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.1",
@@ -21,6 +23,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/supertest": "^2.0.10",
